--- a/public/css/tactics.css
+++ b/public/css/tactics.css
@@ -10,12 +10,6 @@
     background-color: black;
 }
 .grid-square {
-    height: 75px;
-    min-height: 75px;
-    width: 75px;
-    min-width: 75px;
-    margin: 5px;
-    padding: 5px;
     background-color: lightgrey;
     cursor: pointer;
 
@@ -53,13 +47,38 @@
 }
 .grid-square-container {
     text-align: center;
+    min-height: 75px;
+    max-height: 75px;
+    height: 100%;
+    min-width: 75px;
+    max-width: 75px;
+    width: 100%;
 }
-.piece-friendly {
-    color: green;
-    font-weight: bold;
+.piece {
+    height: 75px;
+    width: 75px;
+    stroke-width: 3;
+    font-size: 25px;
 }
-.piece-enemy {
-    color: red;
+.piece circle {
+    cx: 50%;
+    cy: 50%;
+    r: 30;
+}
+.piece text {
+    text-anchor: middle;
+}
+.piece-1 {
+    fill: white;
+}
+.piece-1 text {
+    stroke: black;
+}
+.piece-2 {
+    fill: black;
+}
+.piece-2 text {
+    stroke: white;
 }
 .chat-container {
     width: 100%;
