--- a/webapp/private/game.tmpl
+++ b/webapp/private/game.tmpl
@@ -1,3 +1,4 @@
+{{define "game"}}
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,6 +9,7 @@
 </head>
 
 <body>
+    {{template "header" .}}
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 col-lg-4 push-lg-8 col-xl-6 push-xl-6">
@@ -56,3 +58,4 @@
 <script type="text/javascript" src="/js/game/main.js"></script>
 
 </html>
+{{end}}
