--- a/webapp/private/lobby.tmpl
+++ b/webapp/private/lobby.tmpl
@@ -1,3 +1,4 @@
+{{define "lobby"}}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,6 +8,7 @@
 </head>
 
 <body>
+    {{template "header" .}}
     <div class="container-fluid">
         <h1>Tactics Go</h1>
         <hr>
@@ -24,3 +26,4 @@
 <script type="text/javascript" src="/js/lobby/main.js"></script>
 
 </html>
+{{end}}
