Toggleable nav icon back

--- a/webapp/private/partials/nav.tmpl
+++ b/webapp/private/partials/nav.tmpl
@@ -1,7 +1,7 @@
 {{define "nav"}}
 
-<nav class="navbar navbar-toggleable-md bg-faded">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navContent" aria-controls="navContent" aria-expanded="false">
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navContent" aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="/">Breakout</a>
