--- a/webapp/private/partials/status.tmpl
+++ b/webapp/private/partials/status.tmpl
@@ -1,25 +1,26 @@
 {{define "status"}}
 <div id="status" class="container margin-vert">
     <div class="row status-header">
+        <!-- Row 1 -->
         <div class="col-1"></div>
         <div id="status-player-p1" class="col-5 status-player">
             <div id="status-score-p1" class="status-score status-score-white">
             </div>
+            <button class="btn btn-status btn-sit btn-white margin-vert" type="button" id="ctrlSitP1">Sit</button>
         </div>
         <div id="status-player-p2" class="col-5 status-player">
             <div id="status-score-p2" class="status-score status-score-black">
             </div>
+            <button class="btn btn-status btn-sit btn-black margin-vert" type="button" id="ctrlSitP2">Sit</button>
         </div>
         <div class="col-1"></div>
+        <!-- Row 2 -->
+        <div class="col-xs-1 col-sm-2 col-md-3"></div>
+        <div class="col-xs-10 col-sm-8 col-md-6 text-center">
+            <button class="btn btn-status btn-danger margin-vert" type="button" id="ctrlReset">Reset Game</button>
+        </div>
+        <div class="col-xs-1 col-sm-2 col-md-3"></div>
     </div>
-    <h3>Game Status</h3>
-    <ul>
-        <li id="ctrlStatusRole"></li>
-        <li id="ctrlStatusP1"></li>
-        <li id="ctrlStatusP2"></li>
-    </ul>
-    <button class="btn btn-danger" type="button" id="ctrlReset">Reset Game</button>
-    <button class="btn btn-success" type="button" id="ctrlSitP1">Sit as White</button>
-    <button class="btn btn-success" type="button" id="ctrlSitP2">Sit as Black</button>
+    
 </div>
 {{end}}
