Variable piece width (SVG hacking)

--- a/webapp/private/partials/head.tmpl
+++ b/webapp/private/partials/head.tmpl
@@ -4,8 +4,8 @@
     <script type="text/javascript" src="/lib/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/css/chat.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/game.css"/>
     <link rel="stylesheet" type="text/css" href="/css/status.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/tactics.css"/>
     <link rel="stylesheet" type="text/css" href="/lib/font-awesome-4.7.0/css/font-awesome.min.css"/>
 </head>
 {{end}}
