--- a/webapp/public/css/game.css
+++ b/webapp/public/css/game.css
@@ -82,20 +82,59 @@
 .grid-square-commit-dst:hover {
     background-color: lightyellow !important;
 }
-.grid-square-container {
-    text-align: center;
-    min-height: 50px;
-    max-height: 50px;
-    min-width: 50px;
-    max-width: 50px;
-    height: 100%;
-    width: 100%;
+/* small devices */
+@media (max-width: 575px) {
+    .grid-square-container {
+        text-align: center;
+        height: 100%;
+        width: 100%;
+        min-height: 40px;
+        max-height: 40px;
+        min-width: 40px;
+        max-width: 40px;
+    }
+    .piece{
+        height: 40px;
+        width: 40px;
+        stroke-width: 2;
+        font-size: 12px;
+    }
 }
-.piece {
-    height: 50px;
-    width: 50px;
-    stroke-width: 3;
-    font-size: 15px;
+/* medium devices */
+@media (min-width: 576px) and (max-width: 991px) {
+    .grid-square-container {
+        text-align: center;
+        height: 100%;
+        width: 100%;
+        min-height: 50px;
+        max-height: 50px;
+        min-width: 50px;
+        max-width: 50px;
+    }
+    .piece{
+        height: 50px;
+        width: 50px;
+        stroke-width: 3;
+        font-size: 15px;
+    }
+}
+/* large devices */
+@media (min-width: 992px) {
+    .grid-square-container {
+        text-align: center;
+        height: 100%;
+        width: 100%;
+        min-height: 75px;
+        max-height: 75px;
+        min-width: 75px;
+        max-width: 75px;
+    }
+    .piece{
+        height: 75px;
+        width: 75px;
+        stroke-width: 3;
+        font-size: 20px;
+    }
 }
 .piece text {
     text-anchor: middle;
