--- a/webapp/private/partials/head.tmpl
+++ b/webapp/private/partials/head.tmpl
@@ -1,6 +1,7 @@
 {{define "head"}}
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Breakout</title>
     <script type="text/javascript" src="/lib/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/css/chat.css"/>
