--- a/webapp/private/game.tmpl
+++ b/webapp/private/game.tmpl
@@ -8,7 +8,7 @@
     {{template "nav" .}}
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12 col-lg-8">
+            <div class="col-xs-12 col-sm-7 col-md-8">
                 <div class="container margin-vert">
                     {{template "status" .}}
                     <div class="container">
@@ -16,7 +16,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-12 col-lg-4">
+            <div class="col-xs-12 col-sm-5 col-md-4">
                 <div class="margin-vert">
                     {{template "chat" .}}
                 </div>
