Added options for overlay

--- a/webapp/private/game.tmpl
+++ b/webapp/private/game.tmpl
@@ -20,6 +20,18 @@
                 <div class="margin-vert">
                     {{template "chat" .}}
                 </div>
+                <div class="custom-controls-stacked margin-vert">
+                    <label class="custom-control custom-checkbox">
+                        <input type="checkbox" id="overlay-setting-ctrl-showLastMove" class="overlay-setting-ctrl custom-control-input" checked>
+                        <span class="custom-control-indicator"></span>
+                        <span class="custom-control-description">Show last move</span>
+                    </label>
+                    <label class="custom-control custom-checkbox">
+                        <input type="checkbox" id="overlay-setting-ctrl-showLastUnit" class="overlay-setting-ctrl custom-control-input">
+                        <span class="custom-control-indicator"></span>
+                        <span class="custom-control-description">Show last unit</span>
+                    </label>
+                </div>
             </div>
         </div>
     </div>
