--- a/webapp/private/game.tmpl
+++ b/webapp/private/game.tmpl
@@ -31,6 +31,11 @@
                         <span class="custom-control-indicator"></span>
                         <span class="custom-control-description">Show last unit</span>
                     </label>
+                    <label class="custom-control custom-checkbox">
+                        <input type="checkbox" id="overlay-setting-ctrl-showCollisions" class="overlay-setting-ctrl custom-control-input" checked>
+                        <span class="custom-control-indicator"></span>
+                        <span class="custom-control-description">Show collisions</span>
+                    </label>
                 </div>
             </div>
         </div>
