--- a/webapp/private/game.tmpl
+++ b/webapp/private/game.tmpl
@@ -20,22 +20,8 @@
                 <div class="margin-vert">
                     {{template "chat" .}}
                 </div>
-                <div class="custom-controls-stacked margin-vert">
-                    <label class="custom-control custom-checkbox">
-                        <input type="checkbox" id="overlay-setting-ctrl-showLastMove" class="overlay-setting-ctrl custom-control-input" checked>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Show last move</span>
-                    </label>
-                    <label class="custom-control custom-checkbox">
-                        <input type="checkbox" id="overlay-setting-ctrl-showLastUnit" class="overlay-setting-ctrl custom-control-input">
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Show last unit</span>
-                    </label>
-                    <label class="custom-control custom-checkbox">
-                        <input type="checkbox" id="overlay-setting-ctrl-showCollisions" class="overlay-setting-ctrl custom-control-input" checked>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">Show collisions</span>
-                    </label>
+                <div class="margin-vert">
+                    {{template "overlaysetting" .}}
                 </div>
             </div>
         </div>
