Experimental first step: can convert from JS object Board to golang object Board.. with some difficulties. But methods working

--- a/webapp/private/game.tmpl
+++ b/webapp/private/game.tmpl
@@ -29,6 +29,7 @@
 </body>
 
 {{template "commonjs" .}}
+<script type="text/javascript" src="/js/go/gopherjs.js"></script>
 <script type="text/javascript" src="/js/game/board.js"></script>
 <script type="text/javascript" src="/js/game/chat.js"></script>
 <script type="text/javascript" src="/js/game/unit.js"></script>
