Refactored a bit of Engine

--- a/webapp/private/game.tmpl
+++ b/webapp/private/game.tmpl
@@ -31,6 +31,7 @@
 {{template "commonjs" .}}
 <script type="text/javascript" src="/js/go/gopherjs.js"></script>
 <script type="text/javascript" src="/js/game/renderer/board.js"></script>
+<script type="text/javascript" src="/js/game/renderer/engine.js"></script>
 <script type="text/javascript" src="/js/game/renderer/overlay.js"></script>
 <script type="text/javascript" src="/js/game/renderer/square.js"></script>
 <script type="text/javascript" src="/js/game/chat.js"></script>
