--- a/webapp/private/game.tmpl
+++ b/webapp/private/game.tmpl
@@ -30,9 +30,9 @@
 
 {{template "commonjs" .}}
 <script type="text/javascript" src="/js/go/gopherjs.js"></script>
-<script type="text/javascript" src="/js/game/renderer/board.js"></script>
 <script type="text/javascript" src="/js/game/renderer/engine.js"></script>
 <script type="text/javascript" src="/js/game/renderer/overlay.js"></script>
+<script type="text/javascript" src="/js/game/renderer/renderer.js"></script>
 <script type="text/javascript" src="/js/game/renderer/square.js"></script>
 <script type="text/javascript" src="/js/game/chat.js"></script>
 <script type="text/javascript" src="/js/game/unit.js"></script>
