--- a/webapp/private/game.tmpl
+++ b/webapp/private/game.tmpl
@@ -18,6 +18,9 @@
             </div>
             <div class="col-xs-12 col-sm-5 col-md-4">
                 <div class="margin-vert">
+                    {{template "history" .}}
+                </div>
+                <div class="margin-vert">
                     {{template "chat" .}}
                 </div>
                 <div class="margin-vert">
