History is now a table

--- a/webapp/private/partials/history.tmpl
+++ b/webapp/private/partials/history.tmpl
@@ -1,7 +1,10 @@
 {{define "history"}}
 <div class="container">
     <div class="history-container">
-        <ul id="history"></ul>
+        <table class="table table-sm table-hover">
+            <tbody id="history">
+            </tbody>
+        </table>
     </div>
 </div>
 {{end}}
