--- a/webapp/private/partials/history.tmpl
+++ b/webapp/private/partials/history.tmpl
@@ -1,6 +1,6 @@
 {{define "history"}}
 <div class="container">
-    <div class="history-container">
+    <div id="history-container">
         <table class="table table-sm table-hover">
             <tbody id="history">
             </tbody>
