--- a/webapp/private/partials/overlaysetting.tmpl
+++ b/webapp/private/partials/overlaysetting.tmpl
@@ -1,14 +1,18 @@
 {{define "overlaysetting"}}
-<div class="custom-controls-stacked">
-    <label class="custom-control custom-checkbox">
-        <input type="checkbox" id="overlay-setting-ctrl-showLastMove" class="overlay-setting-ctrl custom-control-input" checked>
-        <span class="custom-control-indicator"></span>
-        <span class="custom-control-description">Show last move</span>
-    </label>
-    <label class="custom-control custom-checkbox">
-        <input type="checkbox" id="overlay-setting-ctrl-showCollisions" class="overlay-setting-ctrl custom-control-input" checked>
-        <span class="custom-control-indicator"></span>
-        <span class="custom-control-description">Show collisions</span>
-    </label>
+<div class="container">
+    <div id="custom-controls-container">
+        <div class="custom-controls-stacked">
+            <label class="custom-control custom-checkbox">
+                <input type="checkbox" id="overlay-setting-ctrl-showLastMove" class="overlay-setting-ctrl custom-control-input" checked>
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Show last move</span>
+            </label>
+            <label class="custom-control custom-checkbox">
+                <input type="checkbox" id="overlay-setting-ctrl-showCollisions" class="overlay-setting-ctrl custom-control-input" checked>
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Show collisions</span>
+            </label>
+        </div>
+    </div>
 </div>
 {{end}}
