New option for move confirmation

--- a/webapp/private/partials/overlaysetting.tmpl
+++ b/webapp/private/partials/overlaysetting.tmpl
@@ -12,6 +12,11 @@
                 <span class="custom-control-indicator"></span>
                 <span class="custom-control-description">Show collisions</span>
             </label>
+            <label class="custom-control custom-checkbox">
+                <input type="checkbox" id="overlay-setting-ctrl-moveConfirmation" class="overlay-setting-ctrl custom-control-input">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Move confirmation</span>
+            </label>
         </div>
     </div>
 </div>
