--- a/webapp/public/css/game.css
+++ b/webapp/public/css/game.css
@@ -83,9 +83,14 @@
 }
 .grid-square-commit-dst {
     background-color: yellow;
+    -webkit-animation: blink-commit 0.5s ease-out;
+    -webkit-animation-iteration-count: infinite;
+    0% {background-color: yellow;}
 }
-.grid-square-commit-dst:hover {
-    background-color: lightyellow !important;
+@-webkit-keyframes blink-commit {
+    0% {background-color: yellow;}
+    50% {background-color: lightyellow;}
+    100% {background-color: yellow;}
 }
 /* small devices */
 @media (max-width: 575px) {
