--- a/webapp/private/partials/head.tmpl
+++ b/webapp/private/partials/head.tmpl
@@ -3,6 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Breakout</title>
     <script type="text/javascript" src="/lib/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="/lib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/lib/jquery.ui.touch-punch.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/css/chat.css"/>
     <link rel="stylesheet" type="text/css" href="/css/game.css"/>
