--- a/webapp/private/partials/head.tmpl
+++ b/webapp/private/partials/head.tmpl
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/css/chat.css"/>
     <link rel="stylesheet" type="text/css" href="/css/game.css"/>
     <link rel="stylesheet" type="text/css" href="/css/history.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/lobby.css"/>
     <link rel="stylesheet" type="text/css" href="/css/overlaysetting.css"/>
     <link rel="stylesheet" type="text/css" href="/css/status.css"/>
     <link rel="stylesheet" type="text/css" href="/lib/font-awesome-4.7.0/css/font-awesome.min.css"/>
