Join game now with cards

--- a/webapp/private/lobby.tmpl
+++ b/webapp/private/lobby.tmpl
@@ -32,7 +32,7 @@
         </div>
         <hr>
         <h4>Join a game</h4>
-        <ul id="gameList"></ul>
+        <div id="gameList"></div>
     </div>
 </body>
 
