--- a/webapp/private/lobby.tmpl
+++ b/webapp/private/lobby.tmpl
@@ -9,7 +9,7 @@
     
     <br>
     
-    <div class="container-fluid">
+    <div class="container">
         <h4>Create a game</h4>
         <br>
         <div class="row">
