--- a/webapp/private/partials/nav.tmpl
+++ b/webapp/private/partials/nav.tmpl
@@ -8,6 +8,9 @@
   
     <div class="collapse navbar-collapse" id="navContent">
         <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/howtoplay">Rules</a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navCreateGameDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Create Game
