--- a/webapp/private/partials/status.tmpl
+++ b/webapp/private/partials/status.tmpl
@@ -4,12 +4,12 @@
         <!-- Row 1 -->
         <div class="col-1"></div>
         <div id="status-player-p1" class="col-5 status-player">
-            <div id="status-score-p1" class="status-score status-score-white">
+            <div id="status-panel-p1" class="status-score status-score-white">
             </div>
             <button class="btn btn-status btn-sit btn-white margin-vert" type="button" id="ctrlSitP1">Sit</button>
         </div>
         <div id="status-player-p2" class="col-5 status-player">
-            <div id="status-score-p2" class="status-score status-score-black">
+            <div id="status-panel-p2" class="status-score status-score-black">
             </div>
             <button class="btn btn-status btn-sit btn-black margin-vert" type="button" id="ctrlSitP2">Sit</button>
         </div>
