--- a/webapp/public/css/history.css
+++ b/webapp/public/css/history.css
@@ -1,8 +1,34 @@
 #history-container {
-    height: 20vh;
-    max-width: 400px;
-    overflow: auto;
     outline: 2px solid;
     font-size: 0.75rem;
     text-align: center;
+}
+#history-list-container {
+    height: 20vh;
+    max-width: 400px;
+    overflow: auto;
+}
+#history {
+    cursor: pointer;
+    /*
+     * Do not allow text to be selectable
+     * https://stackoverflow.com/questions/6900124/how-to-make-certain-text-not-selectable-with-css
+     */
+    -webkit-user-select: none; /* Chrome/Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+ */
+    /* Rules below not implemented in browsers yet */
+    -o-user-select: none;
+    user-select: none;
+}
+.history-btn-container {
+    margin-top: 3px;
+    margin-bottom: 5px;
+}
+.btn-history {
+    padding: 0.5rem 0.5rem;
+    margin: 2%;
+    width: 15%;
+    font-size: 0.75rem;
+    cursor: pointer;
 }
