--- a/webapp/private/partials/chat.tmpl
+++ b/webapp/private/partials/chat.tmpl
@@ -8,7 +8,7 @@
             <input class="form-control" type="text" id="chatname"></input>
         </div>
         <div class="border-bottom-0" id="chatlog">
-            <p class="chat-message chat-greeting"><i>Welcome to the chat! Please be nice!</i><p>
+            <div class="chat-notification">Welcome to the chat! Please be nice!</div>
         </div>
         <div class="input-group">
             <input class="form-control" type="text" id="chatmsg"></input>
